manifest/2.deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata: 
  namespace: todo-app
  name: todo-backend

spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1 

  replicas: 2

  selector:
    matchLabels:
      app: todo-backend

  template:
    metadata:
      labels:
        app: todo-backend

    spec:
      containers:
        - name: todo-backend
          image: acrtodoappbappa.azurecr.io/todo_backend:v1

          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          ports: 
            - containerPort: 8000

      #     volumeMounts: 
      #       - name: todoui-storage
      #         mountPath: /data
              
      # volumes: # if use persistant volume then have to deploy storage class and pvc before then add here
      #   - name: todoui-storage
      #     persistentVolumeClaim: 
      #       claimName: stgclass-todopvc
