manifest/1.service.yaml
apiVersion: v1

kind: Service

metadata:
  namespace: todo-app
  name: todo-backend-service

spec:
 type: ClusterIP

 selector: 
   app: todo-backend

 ports:
   - protocol: TCP
     port: 8000
     targetPort: 8000
