manifest/3.ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: add-task-todo-microservice
  namespace: todo-app
  
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: add-task-api.anihub.shop
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: todo-backend-service
                port:
                  number: 8000
